# flock

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  mise.toml
.config/: nextest.toml
.github/workflows/: release.yml  rust.yml
src/: holder.rs  main.rs
tests/: integration.rs
wix/: main.wxs
