[package]
name = "flock"
version = "0.0.2"
edition = "2024"
rust-version = "1.89"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
license = "MIT, APACHE-2.0"
repository = "https://github.com/quodlibetor/flock"
homepage = "https://github.com/quodlibetor/flock"
readme = "README.md"
description = "Run a command while holding an atomic, OS-managed, death-safe file lock"
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "A035854C-5046-4ECB-A258-ED28F911F273"
path-guid = "E0C73EF7-467A-46B2-9426-5D5FE433BF51"
license = false
eula = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = { version = "1.1.3", features = ["color"] }
predicates = "3.1"
assert2 = "0.4"
rstest = "0.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
